Fix comment UI on mobile

--- a/resources/comments.scss
+++ b/resources/comments.scss
@@ -58,6 +58,7 @@ a {
 }
 
 .comment-operation {
+    flex: auto;
     float: right;
 
     .fa {
